--- a/demo/index.html
+++ b/demo/index.html
@@ -14,9 +14,8 @@ subject to an additional IP rights grant found at http://aercloud.github.io/PATE
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
     <title>aae-aercloud Demo</title>
     <script src="../../webcomponentsjs/webcomponents-lite.min.js"></script>
-    <link rel="import" href="../aae-aercloud.html">
+    <link rel="import" href="../aae-base.html">
   </head>
   <body unresolved>
-    <aae-aercloud></aae-aercloud>
   </body>
 </html>
